--- a/public/backend/pages/tables/data-table.html
+++ b/public/backend/pages/tables/data-table.html
@@ -29,7 +29,7 @@ License: For each use you must have a valid license purchased only from above li
 	<link rel="stylesheet" href="../../../assets/vendors/core/core.css">
 	<!-- endinject -->
 
-	<!-- Plugin css for this page -->
+	<!-- Plugin css for all type page -->
   <link rel="stylesheet" href="../../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.css">
 	<!-- End plugin css for this page -->
 
